--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,7 +38,9 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.firebase:firebase-client-android:2.5.1+'
+    compile 'com.google.firebase:firebase-core:9.6.1'
+    compile "com.google.firebase:firebase-database:9.6.1"
+    compile 'com.google.firebase:firebase-auth:9.6.1'
     compile 'com.android.support:design:25.3.1'
     apply plugin: 'com.google.gms.google-services'
     testCompile 'junit:junit:4.12'
